syntax = "proto3";

package item.v1;

option go_package = "grpc/gen/item/v1;itemv1";

message Item {
    string id = 1;
    string name = 2;
    int32 price = 3;
    string image_url = 4;
}

message ListItemsRequest {
    optional int32 limit = 1;
};
message ListItemsResponse {
    repeated Item items = 1;
};

service ItemService {
    rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
}
